--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "1.12.1",
+    "@react-native-community/datetimepicker": "3.4.7",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "1.15.0",
     "@react-navigation/bottom-tabs": "5.11.10",
     "@react-navigation/native": "5.9.4",
     "@react-navigation/stack": "5.14.4",
+    "axios": "0.21.1",
+    "moment": "2.29.1",
     "react": "17.0.1",
+    "react-moment": "1.1.1",
     "react-native": "0.64.0",
     "react-native-gesture-handler": "1.10.3",
     "react-native-md-textinput": "2.0.4",
@@ -24,6 +29,7 @@
     "react-native-screens": "3.1.1",
     "react-native-splash-screen": "3.2.0",
     "react-native-vector-icons": "8.1.0",
+    "react-native-xml2js": "1.0.3",
     "styled-components": "5.2.3"
   },
   "devDependencies": {
