--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "17.0.1",
     "react-moment": "1.1.1",
     "react-native": "0.64.0",
+    "react-native-animated-loader": "0.0.9",
     "react-native-gesture-handler": "1.10.3",
     "react-native-md-textinput": "2.0.4",
     "react-native-reanimated": "2.1.0",
